feat: add nix development shell and nix based builds